  to its repr().

- Issue #9416: Fix some issues with complex formatting where the
  output with no type specifier failed to match the str output:

    - format(complex(-0.0, 2.0), '-') omitted the real part from the output,
    - format(complex(0.0, 2.0), '-') included a sign and parentheses.

Extensions
----------

- Issue #1027206: Support IDNA in gethostbyname, gethostbyname_ex, 
  getaddrinfo and gethostbyaddr.

- Issue #9214: Set operations on a KeysView or ItemsView in collections
  now correctly return a set.  (Patch by Eli Bendersky.)

- Issue #5737: Add Solaris-specific mnemonics in the errno module.  Patch by
  Matthew Ahrens.

- Restore GIL in nis_cat in case of error. Decode NIS data to fs encoding,
  using the surrogate error handler.

- Issue #665761: ``functools.reduce()`` will no longer mask exceptions
  other than ``TypeError`` raised by the iterator argument.

- Issue #9570: Use PEP 383 decoding in os.mknod and os.mkfifo.

- Issue #6915: Under Windows, os.listdir() didn't release the Global
  Interpreter Lock around all system calls.  Original patch by Ryan Kelly.

- Issue #8524: Add a detach() method to socket objects, so as to put the
  socket into the closed state without closing the underlying file
  descriptor.

- Issue #477863: Print a warning at shutdown if gc.garbage is not empty.

- Issue #6869: Fix a refcount problem in the _ctypes extension.

- Issue #5504: ctypes should now work with systems where mmap can't
  be PROT_WRITE and PROT_EXEC.

- Issue #9507: Named tuple repr will now automatically display the right
  name in a tuple subclass.

- Issue #9324: Add parameter validation to signal.signal on Windows in order
  to prevent crashes.

- Issue #9526: Remove some outdated (int) casts that were preventing
  the array module from working correctly with arrays of more than
  2**31 elements.

- Fix memory leak in ssl._ssl._test_decode_cert.

- Issue #8065: Fix memory leak in readline module (from failure to